--- a/index.html
+++ b/index.html
@@ -11,9 +11,20 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <h2>Logo</h2>
-      </div>
+<div class="logo-container" style="display: flex; align-items: center;">
+    <!-- SVG Logo with Cube -->
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="50" height="50">
+        <!-- Cube -->
+        <rect x="10" y="15" width="20" height="20" fill="white" stroke="black" stroke-width="2"/>
+        <rect x="15" y="10" width="20" height="20" fill="white" stroke="black" stroke-width="2"/>
+        <rect x="10" y="15" width="20" height="20" fill="none" stroke="black" stroke-width="2"/>
+    </svg>
+    
+    <!-- Logo Text with smaller space -->
+    <div class="logo-text" style="font-family: Arial, sans-serif; font-size: 30px; color: white; margin-left: 5px;">
+        Logo
+    </div>
+</div>
       <nav>
         <ul>
           <li><a href="#about">About</a></li>
