header section done

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" href= "css/style.css" />
   </head>
   <body>
+
     <header>
-<div class="logo-container" style="display: flex; align-items: center;">
+
+      <a href="index.html" style="text-decoration: none;">
+    <div class="logo-container" style="display: flex; align-items: center;">
     <!-- SVG Logo with Cube -->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="50" height="50">
         <!-- Cube -->
@@ -19,20 +22,26 @@
         <rect x="15" y="10" width="20" height="20" fill="white" stroke="black" stroke-width="2"/>
         <rect x="10" y="15" width="20" height="20" fill="none" stroke="black" stroke-width="2"/>
     </svg>
-    
     <!-- Logo Text with smaller space -->
-    <div class="logo-text" style="font-family: Arial, sans-serif; font-size: 30px; color: white; margin-left: 5px;">
+      <div class="logo-text" style="font-family: Arial, sans-serif; font-size: 30px; color: white; margin-left: 5px;">
         Logo
-    </div>
-</div>
+     </div>
+  </div>
+ </a>
       <nav>
         <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="https://google.com" target="_blank">About</a></li>
+          <li><a href="#about">Features</a></li>
+          <li><a href="#about">Enterprise</a></li>
+          <li><a href="#about">Pricing</a></li>
+          <li><a href="https://google.com" target="_blank">Resources</a></li>
         </ul>
       </nav>
+
+
+      <div class="buttons">
+        <a class="sign-in" href="#sign-in">Sign in</a>
+        <a class="download" href="#download">Download</a>
+      </div>
     </header>
   </body>
 </html>
