--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <rect x="10" y="15" width="20" height="20" fill="none" stroke="black" stroke-width="2"/>
     </svg>
     <!-- Logo Text with smaller space -->
-      <div class="logo-text" style="font-family: Arial, sans-serif; font-size: 30px; color: white; margin-left: 2px;">
-        Logo
+      <div class="logo-text" style="font-size: 25px; color: white; margin-left: 2px; font-weight: 500;">
+        Cursor-nav-bar
      </div>
   </div>
  </a>
